js/js.translator/testData/incremental/invalidation/privateDeclarationLeakThroughDefaultParam/main/f.13.kt
private object Obj {
    inline konst x get() = "13"
}

private inline fun bar() = Obj.x

internal inline fun foo(lambda: () -> String = ::bar): String {
    return lambda()
}
